--- a/src/carousel.css
+++ b/src/carousel.css
@@ -36,7 +36,7 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: 490px;
+  height: 476px;
   background-color: #fff;
   /* padding: 8px; */
   width: 100%;
@@ -115,8 +115,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  flex-basis: auto;
   /* margin-left: 20px; */
   width: 40%;
+  height: 476px;
+  border: 1px solid #ffffffa7;
+  border-left: none;
 }
 
 .list-item {
@@ -128,9 +132,9 @@ body {
   transition: background-color 0.3s;
 }
 
-.list-item:hover {
+/* .list-item:hover {
   background-color: #f0f0f0;
-}
+} */
 
 .list-item-active {
   background-color: #85a8c5;
